# hivemind

./: .gitignore  CURRENT_CONTEXT.md  README.md  add-contracts.sh  analyze-hivemind.sh  astro-full-context-v1.md  docker-compose.yml  init-astro-docs.sh  update-docs.sh
contracts/: README.md
contracts/api/: get-document.yaml  ingest.yaml  similar.yaml
contracts/events/: document-classified.yaml
contracts/services/: api-gateway.yaml  classifier.yaml  embedder.yaml  hivemind-ui.yaml  linker.yaml
docs/: API_CONTRACTS.md  ARCHITECTURE_IDEAL.md  CURRENT_CONTEXT.md  DECISION_LOG.md  DEPENDENCIES.md  DOMAIN_MODELS.md  KNOWLEDGE_GRAPH.json  ROADMAP.md  go.mod
services/api-gateway/: Dockerfile  go.mod  go.sum  main.go
services/classifier/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/embedder/: main.py
services/go/doc-generator/: Dockerfile  Makefile  config.yaml  go.mod  go.sum
services/go/doc-generator/cmd/: main.go
services/go/doc-generator/internal/contracts/: parser.go
services/go/doc-generator/internal/docker/: compose.go
services/go/doc-generator/internal/generators/: api.go  architecture.go  context.go  roadmap.go  (+2 more)
services/go/file-service/: Dockerfile  go.mod  go.sum
services/go/file-service/cmd/: main.go
services/go/file-service/configs/: config.yaml
services/hivemind-ui/: Dockerfile  pyproject.toml
services/hivemind-ui/hivemind_ui/: main.py
services/hivemind-ui/hivemind_ui/components/: goal_tree.py
services/hivemind-ui/hivemind_ui/pages/: goals.py
services/linker/: main.py  requirements.txt
tools/: ai_assistant.py
(+4 files in other folders)
